--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 spotipy = "^2.23.0"
 pytest = "^8.0.0"
+cohere = "^4.47"
 
 
 [tool.poetry.group.dev.dependencies]
